--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/russo-one": "^5.2.7",
     "@tailwindcss/vite": "^4.1.17",
+    "ldrs": "^1.1.9",
     "qs": "^6.14.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
